ConncetivityBroadCastReceiver added. (Constantly tracking if there is a change on Network connectivity.)
GeneralValues class added. (Holding general constants like API URL)

SplashScreenActivity added. (Contains logics like; user logged in or not, Runtime permission checks -not complete right now-)

BaseApplication class added. (Extends Application class and holds datas locally but off course temporary)

Data Access Object interfaces and their implementations added. (IJSONParseDAO for parsing JSON data with try-catch mechanisms, IServerRequestDAO for making server calls -but errors handled in controllers-, IUserDAO for performing user-relevant end-points)

Models added. (DAOResponse is a container which used by controller and it is for holding parsed data and error -Error can be a Http status code or an API error code-, ErrorModel contains error code and error message, ProductModel is a mirror of the server-side ProductModel and holds all product information, ServerResponseModel holds http status code and response JSON as a string, UserModel holds all user data)

WalkthroughActivity added. (A guide for not logged-in/first come in users)

Two utilities added. APIErrorCodeHandler handles the error codes of API and HttpFailStatusCodeHandler handles the Http status codes (Except 2xx ones)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,10 @@
     <string name="warning_1">İstek başarısız</string>
     <!-- /Warning Strings -->
 
+    <!-- API Error Strings -->
+    <string name="api_error_1">Veritabanı başarısız</string>
+    <string name="api_error_2">Bulunamadı</string>
+    <string name="api_error_3">Ürün bulunamadı</string>
+    <!-- /API Error Strings -->
+
 </resources>
