--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,7 +9,7 @@
     <string name="next_button">Next</string>
     <string name="positive_1">Okay</string>
     <string name="product_info_title">Confirm product</string>
-    <string name="splash_screen_online_error">Check your internet connection</string>
+    <string name="splash_screen_online_error">Please heck your internet connection</string>
     <string name="success_1">Product added to your list</string>
     <string name="success_2">Your list confirmed</string>
     <string name="user_cart_title">Shopping List</string>
